# prod-tools

./: .gitignore  README.md  browser_blocker.pyw  config.py  daily_opener.pyw  install_watchdawg.ps1  notes.md  pyproject.toml  run_prod_tools.ps1  shutdown_enforcer.pyw
src/: app_blocker.pyw  browser_blocker.pyw  config.py  daily_opener.pyw  pomodoro.pyw  shutdown_enforcer.pyw  shutdown_enforcer2.pyw  taskbar_autohide.pyw  utils.py  watchdawg.pyw  weekly_review_opener.pyw
